<resources>
    <string name="app_name">GPS photogrammetry</string>
    <string name="cancel">Cancel</string>
    <string name="connectToDrone">Connect to Drone</string>
    <string name="gpsNotrun">GPS not running</string>
    <string name="onboardgps">Onboard GPS</string>
    <string name="pixhawkgps">Pixhawk GPS</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="degminsec">Deg Min Sec</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="distance">Distance</string>
    <string name="fromhome">from Home</string>
    <string name="timesince">Time since last update</string>
    <string name="time">Time</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="pixhawkdeets">Pixhawk details</string>
    <string name="PREFERENCES_FILE_NAME">preference</string>
    <string name="deg">Degrees</string>

    <string-array name="drone_connection_types">
        <item>USB</item>
        <item>UDP</item>
    </string-array>
</resources>
