<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button
        android:id="@+id/btnGatherData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Start gathering data"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stop Gathering data"
        android:id="@+id/btnCancel"
        android:layout_below="@+id/btnGatherData"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectToDrone"
        android:id="@+id/btnConnect"
        android:onClick="onBtnConnectTap"
        android:layout_below="@+id/btnGatherData"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/btnArmTakeOff"
        android:visibility="invisible"
        android:onClick="onArmButtonTap"
        android:layout_below="@+id/btnConnect" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/btnArmTakeOff">



    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <TableLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="5dp"
            android:id="@+id/tableLayout">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phoneTelemRow1"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gpsNotrun"
                    android:id="@+id/runningText"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onboardgps"
                    android:id="@+id/GPSCoord"
                    android:layout_column="1"
                    android:layout_marginEnd="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pixhawkgps"
                    android:id="@+id/textView9"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/latitudeDegRow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/latitude"
                    android:id="@+id/textView"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:id="@+id/latitudeDegText"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:id="@+id/latitudeDroneDegText"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/degminsec"
                    android:id="@+id/latitudeMinSecText"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/longitude"
                    android:id="@+id/textView2"
                    android:layout_column="0"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:id="@+id/longitudeDegText"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:id="@+id/longitudeDroneDegText"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/degminsec"
                    android:id="@+id/longitudeMinSecText"
                    android:layout_column="1" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/altitude"
                    android:id="@+id/textView6"
                    android:layout_column="0"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altitude"
                    android:id="@+id/altitudeText"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altitude"
                    android:id="@+id/altitudeDroneText"
                    android:layout_column="3" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/speed"
                    android:id="@+id/textView8"
                    android:layout_column="0"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:id="@+id/speedText"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:id="@+id/speedDroneText"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/distance"
                    android:id="@+id/textView10"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fromhome"
                    android:id="@+id/textView11"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:id="@+id/distanceDroneText"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timesince"
                    android:id="@+id/textView7"
                    android:layout_column="0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastUpdateTimeText"
                    android:text="@string/time"
                    android:layout_gravity="left"
                    android:layout_column="1" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Angles"
                    android:id="@+id/PhoneAngles"
                    android:layout_column="0"
                    android:layout_marginTop="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Azimuth"
                    android:id="@+id/textView3"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Azimuth"
                    android:id="@+id/azimuthText"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Azimuth"
                    android:id="@+id/azimuthDroneText"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Pitch"
                    android:id="@+id/textView4"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pitch"
                    android:id="@+id/pitchText"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pitch"
                    android:id="@+id/pitchDroneText"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Roll"
                    android:id="@+id/textView5"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Roll"
                    android:id="@+id/rollText"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Roll"
                    android:id="@+id/rollDroneText"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/pixhawkdeets"
                    android:id="@+id/textView12"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/vehicleDataRow1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mode:"
                    android:layout_gravity="right"
                    android:id="@+id/textView13"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vehicle mode"
                    android:id="@+id/vehicleModeText"
                    android:layout_column="1" />

            </TableRow>
        </TableLayout>
    </HorizontalScrollView>
    </ScrollView>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:id="@+id/modeSpinner"
        android:entries="@array/drone_connection_types"
        android:layout_below="@+id/btnCancel"
        android:layout_alignStart="@+id/btnCancel" />

</RelativeLayout>